fixtures/vc20/invalid/bad-signature.vc2.jwt
eyJhbGciOiJFZERTQSIsImN0eSI6InZjIiwia2lkIjoiZGlkOndlYjpkaWQtc2VydmVyI2p3dC1rZXktMSIsInR5cCI6InZjK2p3dCJ9.eyJpc3MiOiJkaWQ6d2ViOmRpZC1zZXJ2ZXIiLCJzdWIiOiJkaWQ6d2ViOnBhcnRpY2lwYW50LmV4YW1wbGUuY29tIiwiQGNvbnRleHQiOlsiaHR0cHM6Ly93d3cudzMub3JnL25zL2NyZWRlbnRpYWxzL3YyIiwiaHR0cHM6Ly93M2lkLm9yZy9nYWlhLXgvMjUxMSMiXSwiaWQiOiJ1cm46dXVpZDpqd3QtYmRkLXZjMi0xIiwidHlwZSI6WyJWZXJpZmlhYmxlQ3JlZGVudGlhbCIsImd4OkxlZ2FsUGVyc29uIl0sImlzc3VlciI6ImRpZDp3ZWI6ZGlkLXNlcnZlciIsInZhbGlkRnJvbSI6IjIwMjYtMDEtMDFUMDA6MDA6MDBaIiwidmFsaWRVbnRpbCI6IjIwMjctMTItMzFUMjM6NTk6NTlaIiwiY3JlZGVudGlhbFN1YmplY3QiOnsiaWQiOiJkaWQ6d2ViOnBhcnRpY2lwYW50LmV4YW1wbGUuY29tIiwiQHR5cGUiOiJodHRwczovL3czaWQub3JnL2dhaWEteC8yNTExI0xlZ2FsUGVyc29uIiwiaHR0cHM6Ly93M2lkLm9yZy9nYWlhLXgvMjUxMSNsZWdhbE5hbWUiOlt7IkB2YWx1ZSI6IkV4YW1wbGUgQ29ycCBCREQifV19fQ.ISZvqjp4ATXKCb9T3ljWUFxLe-FjRIe4PwgWEoLott1PIZ1pp4UM9xfbI1l6-4l3K6pQgxNQE-jeWmYr35_GCB